--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comprite-website",
-  "homepage": "http://ashraflobo.github.io/",
+  "homepage": "http://ashraflobo.github.io/crk/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
