--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.3",
+    "dateformat": "^5.0.3",
     "formik": "^2.2.9",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "gh-pages": "^4.0.0",
     "prettier": "2.8.4"
   }
