--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-leaflet": "^4.2.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.6.1",
