--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-leaflet": "^4.2.0",
     "react-multi-carousel": "^2.8.2",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
