Fix responsove issues, bsckend issues and download issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comprite-website",
-  "homepage": "https://ashraflobo.github.io/crk",
+  "homepage": "http://13.245.100.42",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
